[package]
name = "my_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

[build-dependencies]
cc = "1.0"

[lib]
# crate-type = ["cdylib"]      # dynamic lib
crate-type = ["staticlib"] # static lib
